$Id: ChangeLog,v 1.143 2004/12/31 10:57:09 drsung Exp $

2004-12-31  Oliver Schulz  <olischulz@web.de>

	* pro/dhcpc.c, include/pro/dhcp.h: Bugfixes from Michel Hendriks applied: 
	Allocate empty dyncfg's to prevent freeing twice of domain/hostname, Clear 
	pointer after ReleaseDynCfg to prevent freeing twice, Make sure SelectOffer 
	is never called with 0 offers, When falling back from rebooting to 
	selecting, clear the received ip address so NutDhcpIfConfig does not assume 
	it has been configured properly.


2004-12-17  Harald Kipp  <harald.kipp@egnite.de>

	* net/route.c, include/net/route.h: Added Adam Pierce's 
	routing management functions.

	* os/bankmem.c: Bugfix. Comparison of the read and write 
	pointers now includes the segments. Thanks to Pete Allinson
	and Johan van der Stoel.

	* dev/nicrtl.c, conf/dev/dev.nut: Support of rising edge 
	interrupts for hardware w/o inverter gate. Fixed compilation 
	issue for hardware with RTL reset port. Thanks to 
	FOCUS Software Engineering Pty Ltd.

	* conf/xnut-100.conf: proconX XNUT-100 board added.


2004-12-16  Harald Kipp  <harald.kipp@egnite.de>

	* dev/ahdlcavr.c, dev/twif.c, dev/uartavr.c, 
	os/arch/avr_timer.c: Late increment fixes ICCAVR bug. 
	Thanks to Andreas Siebert and Michael Fischer.
	
	* conf/charon2.conf: Configuration for Charon II added.

	* pro/httpd.c, include/pro/httpd.h: Added Mikael Adolfsson's
	excellent parameter parsing routines. (Mikael, sorry for
	the delay.)

	* app/httpd/httpserv.c: Form handling uses Mikael's
	NutHttpGetParameter routines. Provided by Michael Fischer.

	* net/ipin.c, include/netinet/ip.h: Added Damian Slee's
	IP filter function.


2004-11-24  Harald Kipp  <harald.kipp@egnite.de>

	* tools/nutconf/nutcomponent.c, tools/nutconf/nutconf.cpp,
	tools/nutconf/nutconf.h, tools/nutconf/valuewindow.cpp,
	tools/nutconf/nutconfdoc.cpp: Release 1.1.1. Do not store 
	empty options. Remove include files from the build tree, 