@@ -1,4 +1,10 @@
-$Id: ChangeLog,v 1.143 2004/12/31 10:57:09 drsung Exp $
+$Id: ChangeLog,v 1.144 2005/01/02 10:07:06 haraldkipp Exp $
+
+2004-01-02  Harald Kipp  <harald.kipp@egnite.de>
+
+	* net/netdebug.c, os/event.c, os/thread.c, os/timer.c:
+	Replaced platform dependant formats in debug outputs.
+
 
 2004-12-31  Oliver Schulz  <olischulz@web.de>
 
